@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<!-- $Id$ -->
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for plugin &quot;tx_icsoddatastore_pi1&quot;</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="anyUser">Any user is logged.</label>
+		</languageKey>
+		<languageKey index="fr" type="array">
+			<label index="anyUser">Identifiez-vous avant de continuer.</label>
+		</languageKey>
+	</data>
+</T3locallang>
